--- a/modelo/modelo.csproj
+++ b/modelo/modelo.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ApiResponse.cs" />
     <Compile Include="Articulo.cs" />
+    <Compile Include="ArticuloDTO.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Imagen.cs" />
