--- a/modelo/modelo.csproj
+++ b/modelo/modelo.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Imagen.cs" />
+    <Compile Include="ImagenDTO.cs" />
     <Compile Include="Marca.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Voucher.cs" />
